k8s/apps/default/maintainerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  labels:
    app.kubernetes.io/component: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: maintainerr
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/name: maintainerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: maintainerr
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/name: maintainerr
    spec:
      containers:
        - name: app
          image: ghcr.io/maintainerr/maintainerr:3.30.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 768Mi
            limits:
              memory: 1Gi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 6246
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /opt/data
              name: data
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: maintainerr
