k8s/apps/default/maintainerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  labels:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/service: maintainerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 6246
      protocol: TCP
      targetPort: 6246
