k8s/apps/default/maintainerr/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  labels:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
spec:
  hostnames:
    - maintainerr.cbannister.xyz
  parentRefs:
    - name: internal-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: maintainerr
          port: 6246
      matches:
        - path:
            type: PathPrefix
            value: /
